# fr_mono

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: lib.rs
